# auto-ytdlp

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  auto_ytdlp.py  auxiliary_features.py  config_manager.py  download_manager.py  error_handler.py  logger.py  notification_manager.py  performance_control.py  requirements.txt  tui_manager.py  upgrades-checklist.md  vpn_manager.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
auto-ytdlp-rs/: Cargo.toml
auto-ytdlp-rs/src/: main.rs
auto-ytdlp-rs/src/check_deps/: mod.rs  video.rs
auto-ytdlp-rs/src/download/: mod.rs
auto-ytdlp-rs/src/ui/: tui.rs
helpers/: config_manager.py  error_handler.py  notification_manager.py  vpn_manager.py
src/: CLAUDE.md  app_state.rs  args.rs  errors.rs  main.rs
src/downloader/: CLAUDE.md  common.rs  mod.rs  progress_parser.rs  queue.rs  worker.rs
src/ui/: CLAUDE.md  mod.rs  settings_menu.rs  tui.rs
src/ui/tui/: input.rs  mod.rs  render.rs
src/utils/: CLAUDE.md  dependencies.rs  display.rs  file.rs  mod.rs  settings.rs
testing/: test_config.toml  tester.py
tests/: clipboard_integration.rs
