[package]
name = "auto-ytdlp"
version = "1.1.0"
edition = "2024"
description = "Download videos with yt-dlp automatically. You can even download multiple videos at the same time!"
authors = ["Francisco Casiano <contact@franciscocasiano.com>"]
license = "GPL-3.0"
repository = "https://github.com/panchi64/auto-ytdlp"
readme = "README.md"
keywords = ["youtube", "download", "tui", "yt-dlp", "video"]
categories = [
    "command-line-utilities",
    "multimedia::video",
    "concurrency",
    "network-programming",
    "filesystem"
]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
clipboard = "0.5.0"
crossterm = "0.29.0"
dirs = "6.0.0"
notify-rust = "4.11.7"
ratatui = "0.30.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
url = "2.5.4"
shlex = "1.3"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "auto-ytdlp"
path = "src/main.rs"
